syntax = "proto3";

package template;

option go_package = "build/shopping_admin";
import "protos/global/global.proto";

message Brand {
  // 品牌id
  string brandId = 1;  // @gotags: gorm:"primary_key;<-:create"
  // 名称
  string name = 2;  // @gotags: gorm:"<-"
  // 介绍
  string introduction = 4;  // @gotags: gorm:"<-"
  // logo
  string logo = 5;  // @gotags: gorm:"<-"
  // 展示类型（1：图片，0：文字）
  int64 displayType = 6;  // @gotags: gorm:"<-"
  // 网址
  string url = 7;  // @gotags: gorm:"<-"
  // 排序
  int64 sortBy = 8;  // @gotags: gorm:"<-"
  // 删除状态
  bool delStatus = 9;  // @gotags: gorm:"-" swaggerignore:"true" minimum:"0" maximum:"1" default:"0"
  // 创建人
  string createBy = 10;  // @gotags: gorm:"->;<-:create" swaggerignore:"true" minLength:"6" maxLength:"19"
  // 修改人
  string updateBy = 11;  // @gotags: gorm:"->;<-:update" swaggerignore:"true" minLength:"6" maxLength:"19"
  // 创建时间
  string createTime = 12;  // @gotags: gorm:"->" swaggerignore:"true"
  // 修改时间
  string updateTime = 14;  // @gotags: gorm:"->" swaggerignore:"true"
}

message BrandParam { }

message BrandIds {
  // 品牌id
  repeated string id = 1;
  // 用户id
  string userId = 2;
  // 商品分类
  string productCategoryId  = 3;
}

message BrandListVo {
  // 品牌id
  string brandId = 1;  // @gotags: gorm:"primary_key;<-:create"
  // 名称
  string name = 2;  // @gotags: gorm:"<-"
  // 介绍
  string introduction = 4;  // @gotags: gorm:"<-"
  // logo
  string logo = 5;  // @gotags: gorm:"<-"
  // 展示类型（1：图片，0：文字）
  int64 displayType = 6;  // @gotags: gorm:"<-"
  // 网址
  string url = 7;  // @gotags: gorm:"<-"
  // 排序
  int64 sortBy = 8;  // @gotags: gorm:"<-"
}

message BrandDetailVo {
  // 品牌id
  string brandId = 1;
  // 名称
  string name = 2;
  // 介绍
  string introduction = 4;
  // logo
  string logo = 5;
  // 展示类型（1：图片，0：文字）
  int64 displayType = 6;
  // 网址
  string url = 7;
  // 排序
  int64 sortBy = 8;
  // 创建时间
  string createTime = 9;
}

// 分页查询加权参数
message BrandPageAuthQuery {
  // 分页索引
  int64 pageIndex = 1;
  // 分页长度
  int64 pageSize = 2;
  // 查询参数
  BrandParam params = 3;
  // 用户登录授权信息
  global.Auth auth = 4;  // @gotags: swaggerignore:"true"`
}

// 返回结果
message BrandResponse {
  int64 count = 1;  // 获取数据数量
  string Msg = 2;  // 错误信息
  Brand detail = 3;  // 详情
  repeated Brand list = 4;  // 列表
}

// 业务实现
service BrandService {
  // 新增
  rpc Create(Brand) returns (BrandResponse);

  // 修改
  rpc Update(Brand) returns (BrandResponse);

  // 删除
  rpc Delete(BrandIds) returns (BrandResponse);

  // 查询 详情
  rpc FindById(BrandIds) returns (BrandResponse);

  // 查询 分页
  rpc FindPageList(BrandPageAuthQuery) returns (BrandResponse);

  // 根据分类查询品牌
  rpc FindListByProductCategoryId(BrandIds) returns (BrandResponse);
}
